--- a/index.html
+++ b/index.html
@@ -723,6 +723,7 @@
   <footer>
     <p>&copy; 2025 Hauck Dachdeckerei. Alle Rechte vorbehalten.</p>
     <p><a href="mailto:info@hauck-dachdeckerei.de">info@hauck-dachdeckerei.de</a> | Tel: 0123 4567890</p>
+    <p>~ Prototyp ~</p>
   </footer>
 
   <div class="lightbox-overlay" id="lightboxOverlay">
